examples/test/testpolicy1404.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1404
  namespace: namespace70
spec:
  podSelector:
    matchLabels:
      key2: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value9
      podSelector:
        matchLabels:
          key41: value24
          key16: value36
          key19: value6
